Migrate Maven SDK Repo project to SDK 3.0.0.