@@ -1,8 +1,8 @@
-@ECHO OFF
+::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::
+::      Dev environment startup script for Alfresco Community     ::
+::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::
+@echo off
 
-IF "%MAVEN_OPTS%" == "" (
-    ECHO The environment variable 'MAVEN_OPTS' is not set, setting it for you
-    SET MAVEN_OPTS=-Xms256m -Xmx2G -XX:PermSize=300m
-)
-ECHO MAVEN_OPTS is set to '%MAVEN_OPTS%'
-mvn clean install -Pamp-to-war
+set MAVEN_OPTS=-Xms256m -Xmx2G
+
+mvn clean install alfresco:run
